CSS/WREST-MAIN-CSS.css
body {
    font-family: "Open Sans";
    padding: 0px;
    margin: 0px;
    width: 100%;
    height: 100%
}

.bodycontainer {
    width: 100%;
    height: 100%;
    margin: 0px;
    padding: 0px;
}

#skip-link{
  position:absolute;
  top:0px;
  left:0px;
  display:block;


  z-index:100;
  padding:5px;
}

#skip-link a{
  color:transparent;
}

#skip-link a:focus{
  color:black;
}

xmp{
  text-align: left;
  display:inline-block;
  background-color:#eee;
  border:1px solid gray;
  font-family:monospace;
  font-size:1.2rem;
  width:auto;
  margin:2vmin;
  margin-left:0;
  padding:1vmin;
}




/* ____________________________Banner Start _______________________________________*/

.bannercontainer {
    background-color: #D5E8E4;
    height: 20%;
    width: 100%;
    z-index: 1;
}

.bannercontainer img {
    position: relative;
	//margin-left: 5%;
    margin-left: 83px; /* rein */
    width:10%;/* Lukas */
    height:auto;/* Lukas */
	margin-top: 1%;
	margin-bottom: 1%;
}

/* Banner Stop*/

/* Language Nav Start ___________________________________________________________________*/

.languagenav {
    margin: 0px;
    margin-right: 20px;  /* rein */
    padding: 0px;
    width: 30vw;
    height: 4vh;
    position: absolute;
    display: block;
    z-index: 2;
    right: 0;
    top: 0;
    list-style: none;
}

.languagenav nav {
    margin: 0;
    padding: 0;
    right: 0;
    position: absolute;
}

.languagenav ul {
    height: inherit;
    margin: 0px;
    padding: 0;
    position: relative;
	display: inline;
}

.languagenav li {
    height: inherit;
    display: inline;
	margin: 0px;
    margin-left: 1vw;
	padding: 0px;
    z-index: 2;
}

.languagenav a {
    text-align:center;
    vertical-align: middle;
    font-size: 1vw;
    padding-bottom: 5px;
    text-decoration: none;
    right: 0;
}

.languagenav img {
    margin: 0;
    padding: 0;
    width: 2vw;
    height: 2vw;
    position: relative;
    top: 0.6vw;
}

.languagenav a:hover {
    text-decoration: underline;
    cursor: pointer;
}

.languagenav a:focus {
    text-decoration: underline;
    cursor: pointer;
}

.selectedLang{/*Lukas: added something to show what language is selected,
  this class is applied to the selected language, feel free to prettify */
    border-bottom:1px solid black;
}

/* Language Nav Stop */

/* Developer/User Tab Start */

.developertab {
    margin: 0px;
    padding: 0px;
    width: 4vw;
    height: 4vh;
    position: relative;
    display: block;
    float:right;
    z-index: 2;
    right: 30vw;
    bottom: 25px;
}

@-moz-document url-prefix() {

.developertab {
    bottom: 50px;
 }
}

.developertab nav {
    position:absolute;
    left: 0;
    margin: 0;
    padding: 0;
    width: inherit;
}

.developertab ul {
    margin: 0px;
    padding: 2vw;
    position: relative;
	display: inline;
    width: 2vw;
}

.developertab li {
    height: inherit;
    display: inline;
	margin: 0px;
    margin-left: 3px;
	padding: 0px;
    z-index: 2;
}

.developertab a {
    text-align: center;
    width: 40%;
    text-decoration: none;
    vertical-align: middle;
    line-height: normal;
    color: white;
    margin: 0px;
    font-size: 1.2em;
	padding-left: 1vw;
	padding-right: 1vw;
    border-style: solid;
    border-width: 1px 1px 0px 1px;
    border-color: #298A79;
    border-radius: 10px 10px 0px 0px;
    background-color: #298A79;
    font-family: "Open Sans";
    font-weight: bold;
    transition: all 0.5s ease-in-out;
    box-shadow: 0px 5px 4px 0px #298A79;
}

.developertab a:hover {
    /* box-shadow: 0px 5px 10px #1E5E50; */
    background-color: #1E5E50;
}

.developertab a:focus {
    background-color: #1E5E50;
}

#developertabactive {
    background-color: #1E5E50;
}

#notactive {
}



/* Developer/User Tab Start ________________________________________________________________*/

/* Main Nav Start */

.mainnavcontainer {
   // border-top:1px solid black;

    background-color: #298A79;
    margin: 0px;
    padding: 0px;
    padding-bottom: 4px;  /* rein */
    padding-top: 4px;   /* rein*/
    width: 100%;
    height: 20%;
}

.mainnavcontainer nav {
    left: 0px;
    margin: 0px;
    padding: 0px;
    padding-left: 71px; /* rein */
}

.mainnavcontainer ul {
    margin: 0px;
    padding: 0px;
    position: relative;
	display: inline;

}

.mainnavcontainer li {
    height: inherit;
    display: inline;
	margin: 0px;
	padding: 0px;
}

.mainnavcontainer a {
    text-align: center;
    width: 300px;
    text-decoration: none;
    vertical-align: middle;
    line-height: normal;
    color: white;
    left: 0px;
    bottom:0px;
    top:0px;
    margin: 0px;
    font-size: 2em;
	padding-left: 16px;
	padding-right: 16px;
    border-style: solid;
    border-width: 0px 1px 0px 0px;
    border-color: black;

}

.mainnavcontainer a:hover {
    background-color: #1E5E50;
     padding-bottom: 4px;  /* rein */
    padding-top: 4px;   /* rein*/

    }

.mainnavcontainer a:focus {
    background-color: #1E5E50;
}

#mainnavactive {

}

/* #wrestepost {
    position: relative;
    bottom: 80px;
    left: 1100px;
    font-size: 150%;
    color: white;
}
*/


/* Main Nav Slutt */


/* Main Section Start __________________________________________*/

.mainsectioncontainer {
    margin: 0px 90px 0px 90px;  /*  rein edit */
    padding-top: 30px;  /* rein */
    padding-bottom: 50px; /* rein */
    height: 50%;
}

.mainsectioncontainer h1 {
    font-size: 2vw;
}

.mainsectioncontainer h2 {
    font-size: 1.5rem;
    margin-left:1rem;
}


/* Main Section Stop */


/* Footer Start_____________________________________________- */

.footercontainer {
    min-height: 240px;
    width: 100%;
    background-color: #298A79;
    height: 10%;
    position: relative;
    bottom: 0;
}

.infocontainer {
    color: white;
    float: left;
    text-align: left;
    margin: 45px 45px 45px 45px;
    height: 4vw;
    width: 16vw;
}

.infocontainer h3 {
    margin: 0px;
}

.infocontainer ul {
    list-style: none;
    margin: 0px;
    padding: 0px;
    font-size: 120%;
}

.infocontainer a:hover {
    text-decoration: underline;
}

.infocontainer a:focus {
    text-decoration: underline;
}


/* Footer Stop */

